--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,17 +2,20 @@
 
 @font-face {
   font-family: "Flutterwave";
-  src: url(../fonts/Flutterwave/OpenType-TT/Flutterwave-Black.ttf) format("truetype");
+  src: url(../fonts/Flutterwave/OpenType-TT/Flutterwave-Black.ttf)
+    format("truetype");
 }
 
 @font-face {
   font-family: "Flw-black-italic";
-  src: url(../fonts/Flutterwave/OpenType-TT/FLW-Black-Italic.ttf) format("truetype");
+  src: url(../fonts/Flutterwave/OpenType-TT/FLW-Black-Italic.ttf)
+    format("truetype");
 }
 
 @font-face {
   font-family: "FLW-Bold-Italic";
-  src: url(../fonts/Flutterwave/OpenType-TT/FLW-Bold-Italic.ttf) format("truetype");
+  src: url(../fonts/Flutterwave/OpenType-TT/FLW-Bold-Italic.ttf)
+    format("truetype");
 }
 
 @font-face {
@@ -239,7 +242,7 @@
   padding-left: 30px;
 }
 
-.card__pin>div {
+.card__pin > div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 10px;
@@ -415,7 +418,7 @@ input:focus {
   line-height: 14px;
   letter-spacing: 0.3px;
   color: #8a7a5c;
-  margin-top: 100px;
+  margin-top: 80px;
   padding: 6px;
 }
 
@@ -430,7 +433,8 @@ input:focus {
   /* align-items: center; */
 }
 
-input[type="number"], input[type="password"] {
+input[type="number"],
+input[type="password"] {
   width: 72.62px;
   height: 59px;
   font-size: 25px;
@@ -440,11 +444,15 @@ input[type="number"], input[type="password"] {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-input[type="number"]:hover, input[type="password"]:hover, input[type="password"]:focus, input[type="number"]:focus {
+input[type="number"]:hover,
+input[type="password"]:hover,
+input[type="password"]:focus,
+input[type="number"]:focus {
   outline: none;
 }
 
-input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
@@ -1083,4 +1091,12 @@ input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-o
   border-width: 0.946925px 0 0 0;
   border-top-color: #e4ecf3;
   width: 50%;
+}
+
+.input__icon input {
+  padding-left: 40px;
+}
+
+.input__icon {
+  position: relative;
 }
