--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1090,7 +1090,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .hr__style {
   border-width: 0.946925px 0 0 0;
   border-top-color: #e4ecf3;
-  width: 50%;
+  width: 45%;
+  margin: auto;
 }
 
 .input__icon input {
