--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1058,7 +1058,7 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 100%;
   height: 42px;
   display: block;
-  border-color: #f5a623;
+  border: none;
   border-radius: 5px;
   padding: 14px 28px;
   margin-top: 30px;
@@ -1068,6 +1068,7 @@ input[type="number"]::-webkit-outer-spin-button {
   line-height: 14px;
   text-align: center;
   color: #f5a623;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.12);
 }
 
 .barter__prompt__button :focus {
